Se agregaron cambios finales

--- a/src/main/resources/templates/reporte.html
+++ b/src/main/resources/templates/reporte.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reporte de Municipios</title> <!-- Título de la página -->
+    <title>Reporte de Municipios</title>
 </head>
 <body>
-<h1>Reporte de Municipios por Departamento</h1> <!-- Encabezado principal -->
+<h1>Reporte de Municipios por Departamento</h1>
 
-<!-- Tabla que muestra el reporte de municipios por departamento -->
+<!-- Tabla para mostrar el reporte de municipios por departamento -->
 <table border="1">
     <thead>
     <tr>
@@ -17,7 +17,7 @@
         <th>Densidad Total</th>
         <th>Porcentaje Población Urbana</th>
         <th>Porcentaje Población Rural</th>
-        <th>Área Promedio</th> <!-- Nueva columna para el área promedio -->
+        <th>Área Promedio</th>
         <th>Municipio Más Grande</th>
         <th>Municipio Más Pequeño</th>
         <th>Mayor Densidad</th>
@@ -25,13 +25,13 @@
     </tr>
     </thead>
     <tbody>
-    <!-- Itera sobre el mapa "reporte" pasado desde el controlador y muestra cada entrada -->
+    <!-- Iteración sobre el mapa "reporte" pasado desde el controlador -->
     <tr th:each="entry : ${reporte}">
         <td th:text="${entry.value['nombreDepartamento']}">Departamento</td>
         <td th:text="${entry.value['densidadUrbana']}">Densidad Urbana</td>
         <td th:text="${entry.value['densidadTotal']}">Densidad Total</td>
-        <td th:text="${entry.value['porcentajeUrbana']}">Porcentaje Urbana</td>
-        <td th:text="${entry.value['porcentajeRural']}">Porcentaje Rural</td>
+        <td th:text="${entry.value['porcentajeUrbana']}">Porcentaje Población Urbana</td>
+        <td th:text="${entry.value['porcentajeRural']}">Porcentaje Población Rural</td>
         <td th:text="${entry.value['areaPromedio']}">Área Promedio</td>
         <td th:text="${entry.value['municipioMasGrande']}">Municipio Más Grande</td>
         <td th:text="${entry.value['municipioMasPequeño']}">Municipio Más Pequeño</td>
